--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -20,7 +20,7 @@ tokio             ={ version="1.36", features=["macros", "fs", "rt-multi-thread"
 axum              ={ version="0.7.5" }
 entropy-shared    ={ version="0.1.0", path="../shared" }
 entropy-kvdb      ={ version="0.1.0", path="../kvdb", default-features=false }
-entropy-tss       ={ version="0.1.0", path="../threshold-signature-server" }
+entropy-tss       ={ version="0.1.0", path="../threshold-signature-server", features=["test_helpers"] }
 entropy-protocol  ={ version="0.1.0", path="../protocol" }
 synedrion         ={ git="https://github.com/entropyxyz/synedrion", rev="25373111cbb01e1a25d8a5c5bb8f4652c725b3f1" }
 hex               ="0.4.3"
